# qwen3-tts-spanish-voices

./: .git-blame-ignore-revs  .gitignore  .opencode_task.md  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  MAINTAINER_BACKLOG.md  MCP_CLIENT_REPORT.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
presets/: voices.yaml
scripts/: curate.py  prototype_speed_fix.py
src/spanish_tts/: __init__.py  cli.py  config.py  engine.py  mcp_server.py
tests/: conftest.py  test_cli.py  test_config.py  test_curate.py  test_engine.py  test_engine_integration.py  test_mcp_errors.py  test_mcp_protocol.py  test_mcp_server.py  test_speed.py
