[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-spanish-voices"
version = "0.2.0"
description = "Curated Spanish TTS voices using Qwen3-TTS voice cloning and design"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Alberto González Rouillé" }]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "datasets>=2.14",
]

[project.optional-dependencies]
mlx = [
    "mlx-audio>=0.4.0,<0.5",
    "mlx-lm>=0.31.0,<0.32",
]
mcp = [
    "mcp[cli]>=1.0",
]
speed = [
    "librosa>=0.10,<0.12",
]
all = [
    "qwen3-tts-spanish-voices[mlx,mcp,speed]",
]
dev = [
    "pytest>=7",
    "ruff>=0.15",
    "pre-commit>=3",
]

[project.scripts]
spanish-tts = "spanish_tts.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear
select = ["E", "F", "W", "I", "UP", "B"]
# Noise we don't want: long lines (format handles most; keep E501 off for now)
# and unused module imports inside __init__ (we use them as re-exports).
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"src/spanish_tts/__init__.py" = ["F401"]
"tests/**" = ["B011"]  # pytest asserts

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
