[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen3-tts-spanish-voices"
version = "0.3.0"
description = "Curated Spanish TTS voices using Qwen3-TTS voice cloning and design"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Alberto González Rouillé" }]
keywords = ["tts", "spanish", "qwen3", "mlx", "apple-silicon", "voice-cloning", "mcp"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "soundfile>=0.12",
    "numpy>=1.24",
    "datasets>=2.14",
]

[project.optional-dependencies]
mlx = [
    "mlx-audio>=0.4.0,<0.5",
    "mlx-lm>=0.31.0,<0.32",
]
mcp = [
    "mcp[cli]>=1.0",
]
speed = [
    "librosa>=0.10,<0.12",
]
all = [
    "qwen3-tts-spanish-voices[mlx,mcp,speed]",
]
dev = [
    "pytest>=7",
    # Pin to track the ruff-pre-commit hook rev so the same rules run
    # locally, in the hook, and in CI. Bump both in lockstep.
    "ruff==0.15.*",
    "pre-commit>=3",
]

[project.urls]
Homepage = "https://github.com/alblez/qwen3-tts-spanish-voices"
Source = "https://github.com/alblez/qwen3-tts-spanish-voices"
Issues = "https://github.com/alblez/qwen3-tts-spanish-voices/issues"
Changelog = "https://github.com/alblez/qwen3-tts-spanish-voices/blob/main/CHANGELOG.md"

[project.scripts]
spanish-tts = "spanish_tts.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# Register custom markers so pytest does not warn with PytestUnknownMarkWarning.
# CI and the pre-push hook filter with -m "not slow" to skip tests that
# require heavy extras (mlx, large model downloads, or long audio synthesis).
markers = [
    "slow: heavy tests that need the [mlx] extra or long synthesis runs (skipped in CI and pre-push pytest)",
    "requires_mlx: tests that need Apple Silicon + the [mlx] extra (skipped in CI ubuntu leg)",
]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear
select = ["E", "F", "W", "I", "UP", "B"]
# Long lines: ruff-format handles most cases; leaving E501 off avoids
# noise on unsplittable strings, URLs, and long comments.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# __init__.py uses imports as re-exports; silence the unused-import lint.
"src/spanish_tts/__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
